[gd_scene load_steps=44 format=4 uid="uid://d2fkn7g1f06qx"]

[ext_resource type="Script" uid="uid://il7jjq6dqse2" path="res://Scripts/level_init_score_reset.gd" id="1_2c7ai"]
[ext_resource type="Texture2D" uid="uid://brkmiw7ichm8c" path="res://Backgrounds/basketball court.png" id="2_jillu"]
[ext_resource type="PackedScene" uid="uid://cxelaio27436c" path="res://Scenes/Submit.tscn" id="3_8ovxk"]
[ext_resource type="FontFile" uid="uid://bp0wsnbgohnte" path="res://Fonts/Bagura Font Pack v1.5/Bagura Font Pack v1.5/Bold.ttf" id="4_l63u7"]
[ext_resource type="PackedScene" uid="uid://dfas4l8bwq4dy" path="res://Scenes/EndPanel.tscn" id="5_aqdkc"]
[ext_resource type="Texture2D" uid="uid://cpq588ls8gpwa" path="res://Object Design/Derelict Car.png" id="6_d6i26"]
[ext_resource type="PackedScene" uid="uid://d1ceka3obe5tw" path="res://Scenes/instruction_panel.tscn" id="6_l63u7"]
[ext_resource type="Script" uid="uid://brkth37eoghxi" path="res://Scripts/garbage.gd" id="7_1qhem"]
[ext_resource type="Texture2D" uid="uid://b1v6uul702t07" path="res://Object Design/Alchoholic Glass Bottle.png" id="8_yt6xm"]
[ext_resource type="Texture2D" uid="uid://bobavicaicvs0" path="res://Object Design/Graffiti 1.png" id="9_sh0uj"]
[ext_resource type="Texture2D" uid="uid://csf6j0slmnya3" path="res://Object Design/Graffiti 2.png" id="10_0vv7s"]
[ext_resource type="Texture2D" uid="uid://cl1eesneubyge" path="res://Object Design/Broken Glass Bottle.png" id="11_3okml"]
[ext_resource type="Texture2D" uid="uid://gm10fsxw7gd6" path="res://Object Design/Trashbag.png" id="12_lcfyl"]
[ext_resource type="PackedScene" uid="uid://c0chc8svja7jo" path="res://Scenes/pause_menu.tscn" id="13_cohjx"]
[ext_resource type="AudioStream" uid="uid://c7vo10yhy8cv0" path="res://Sounds/menu sound.ogg" id="14_gpu3e"]
[ext_resource type="Texture2D" uid="uid://bbsbys4jklfvc" path="res://Assests/Grid.png" id="15_il6mp"]
[ext_resource type="Script" uid="uid://duurvrxh5a4kl" path="res://Scenes/Levels/BCourt_game_manager.gd" id="16_8ovxk"]
[ext_resource type="Script" uid="uid://bhirg7xwu1jd" path="res://Scripts/trash_bar.gd" id="17_2mfhe"]
[ext_resource type="AudioStream" uid="uid://bv5cyyoatnx8b" path="res://Sounds/park.ogg" id="17_jillu"]
[ext_resource type="Texture2D" uid="uid://bv07x5ibjjcuw" path="res://Assests/New Piskel-1.png (2).png" id="18_dppq6"]
[ext_resource type="Texture2D" uid="uid://8tu1n5k1eps" path="res://Object Design/Trash Can.png" id="19_fyio0"]
[ext_resource type="AudioStream" uid="uid://lx2y7nuhp4yn" path="res://Sounds/trashed object sound.ogg" id="20_wdrei"]
[ext_resource type="Texture2D" uid="uid://457yyut3tl7l" path="res://Object Design/Lamp Post.png" id="21_ksage"]
[ext_resource type="Script" uid="uid://df4dud7inlen8" path="res://Scripts/object.gd" id="22_oa67o"]
[ext_resource type="Texture2D" uid="uid://btubnnc058u5u" path="res://Object Design/Car Barrier.png" id="23_bd2qr"]
[ext_resource type="Texture2D" uid="uid://c8rcefyfsrsvn" path="res://Object Design/Brick Wall.png" id="24_0hnkm"]
[ext_resource type="Script" uid="uid://ck8gli842jyqt" path="res://Scenes/Levels/fence.gd" id="25_non23"]
[ext_resource type="Texture2D" uid="uid://cglkcpoildkyf" path="res://Object Design/Barrier.png" id="26_rlno0"]
[ext_resource type="Texture2D" uid="uid://cxfcjxu0r868l" path="res://Object Design/basketball.png" id="27_2bs18"]
[ext_resource type="Texture2D" uid="uid://2sfbo6de0ucx" path="res://Object Design/CCTV Left Facing.png" id="28_2nb5f"]
[ext_resource type="Texture2D" uid="uid://de4jkalr1k8l" path="res://Object Design/drinking fountain.png" id="28_8ovxk"]
[ext_resource type="Texture2D" uid="uid://cbgtw81rt66as" path="res://Object Design/CCTV Right Facing.png" id="29_ekgmw"]
[ext_resource type="Texture2D" uid="uid://bbwkh1v67ymo1" path="res://Object Design/Fountain.png" id="30_lxvgo"]
[ext_resource type="Texture2D" uid="uid://d0lri3ns4hoj1" path="res://Object Design/Guard Dog.png" id="31_sedw4"]
[ext_resource type="Texture2D" uid="uid://b513bwbhaefah" path="res://Object Design/Maintenance Worker.png" id="32_bw4h7"]
[ext_resource type="Texture2D" uid="uid://b4p3q3xharqfy" path="res://Object Design/Security Patrol.png" id="33_n8xpl"]
[ext_resource type="Texture2D" uid="uid://8tjloi8205bu" path="res://Object Design/Netted Fence.png" id="34_eb5sb"]
[ext_resource type="AudioStream" uid="uid://ckhpvh2spfqfa" path="res://Sounds/object placed.ogg" id="35_dys5q"]
[ext_resource type="FontFile" uid="uid://gk2r702ierey" path="res://Fonts/Bagura Font Pack v1.5/Bagura Font Pack v1.5/Basal.ttf" id="36_jxhuj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_svhu8"]
texture = ExtResource("15_il6mp")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_uaog8"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_svhu8")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3p8oo"]
bg_color = Color(0.137255, 0.0392157, 0.462745, 1)
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color(0, 0.00392157, 0.141176, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u0h72"]
content_margin_left = 10.0
content_margin_top = 3.0
bg_color = Color(0.87451, 0.756863, 0.235294, 0)

[node name="Main" type="Node2D"]
script = ExtResource("1_2c7ai")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_jillu")
expand_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Submit" parent="UILayer" instance=ExtResource("3_8ovxk")]
offset_bottom = 79.0
theme_override_fonts/font = ExtResource("4_l63u7")
theme_override_font_sizes/font_size = 40

[node name="EndPanel" parent="UILayer" instance=ExtResource("5_aqdkc")]

[node name="InstructionPanel" parent="UILayer" instance=ExtResource("6_l63u7")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="DragLayer" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DeroCar" type="TextureRect" parent="CanvasLayer/DragLayer"]
layout_mode = 0
offset_left = 1409.0
offset_top = 407.0
offset_right = 1699.0
offset_bottom = 623.0
texture = ExtResource("6_d6i26")
expand_mode = 1
script = ExtResource("7_1qhem")

[node name="Bottle" type="TextureRect" parent="CanvasLayer/DragLayer"]
layout_mode = 0
offset_left = 25.0
offset_top = 642.0
offset_right = 113.0
offset_bottom = 734.0
texture = ExtResource("8_yt6xm")
expand_mode = 1
script = ExtResource("7_1qhem")

[node name="Graffiti" type="TextureRect" parent="CanvasLayer/DragLayer"]
layout_mode = 0
offset_left = 34.0
offset_top = 290.0
offset_right = 213.0
offset_bottom = 433.0
texture = ExtResource("9_sh0uj")
expand_mode = 1
script = ExtResource("7_1qhem")

[node name="Graffiti2" type="TextureRect" parent="CanvasLayer/DragLayer"]
layout_mode = 0
offset_left = 1605.0
offset_top = 806.0
offset_right = 1803.0
offset_bottom = 915.0
texture = ExtResource("10_0vv7s")
expand_mode = 1
script = ExtResource("7_1qhem")

[node name="BrokenBottle" type="TextureRect" parent="CanvasLayer/DragLayer"]
layout_mode = 0
offset_left = 647.0
offset_top = 673.0
offset_right = 765.0
offset_bottom = 755.0
texture = ExtResource("11_3okml")
expand_mode = 1
script = ExtResource("7_1qhem")

[node name="TrashBag" type="TextureRect" parent="CanvasLayer/DragLayer"]
layout_mode = 0
offset_left = 721.0
offset_top = 797.0
offset_right = 825.0
offset_bottom = 896.0
texture = ExtResource("12_lcfyl")
expand_mode = 1
script = ExtResource("7_1qhem")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 5

[node name="PauseMenu" parent="CanvasLayer2" instance=ExtResource("13_cohjx")]
offset_left = 2.0
offset_top = 2.0
offset_right = 2.0
offset_bottom = 2.0

[node name="menu_click" type="AudioStreamPlayer" parent="CanvasLayer2/PauseMenu"]
stream = ExtResource("14_gpu3e")
volume_db = 10.0

[node name="Grid" type="TileMapLayer" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.372549)
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAABAAAAAAAAAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAACAAAAAAAAAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAAAAAAAAAACAAcAAAAAAAAAAAACAAgAAAAAAAAAAAACAAkAAAAAAAAAAAACAAoAAAAAAAAAAAADAAAAAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAAEAAAAAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAgAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAAAAAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAGAAAAAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAIAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAQAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAYAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAgAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAoAAAAAAAAAAAAHAAAAAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAIAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAIAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAYAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAKAAAAAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAIAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAgAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAoAAAAAAAAAAAALAAAAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAAMAAAAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAYAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAgAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAoAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAAOAAAAAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAYAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAoAAAAAAAAAAAAPAAAAAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAQAAAAAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAIAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAQAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAYAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAgAAAAAAAAAAAAQAAkAAAAAAAAAAAAQAAoAAAAAAAAAAAARAAAAAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAARAAYAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAASAAAAAAAAAAAAAAASAAEAAAAAAAAAAAASAAIAAAAAAAAAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAASAAUAAAAAAAAAAAASAAYAAAAAAAAAAAASAAcAAAAAAAAAAAASAAgAAAAAAAAAAAASAAkAAAAAAAAAAAASAAoAAAAAAAAAAAATAAAAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAATAAUAAAAAAAAAAAATAAYAAAAAAAAAAAATAAcAAAAAAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAYAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_uaog8")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("16_8ovxk")

[node name="ambient_music" type="AudioStreamPlayer" parent="GameManager"]
stream = ExtResource("17_jillu")
volume_db = 15.0

[node name="TrashBar" type="Control" parent="."]
z_index = 100
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("17_2mfhe")

[node name="TextureRect" type="TextureRect" parent="TrashBar"]
layout_mode = 0
offset_left = 1950.0
offset_top = 550.0
offset_right = 2078.0
offset_bottom = 678.0
texture = ExtResource("18_dppq6")

[node name="Bin" type="TextureRect" parent="TrashBar/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("19_fyio0")
expand_mode = 1

[node name="trashed_object" type="AudioStreamPlayer" parent="TrashBar/TextureRect/Bin"]
stream = ExtResource("20_wdrei")
volume_db = 10.0

[node name="NavBarLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="NavBar" type="Control" parent="NavBarLayer"]
z_index = 100
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="NavBarLayer/NavBar"]
layout_mode = 0
offset_top = 900.0
offset_right = 1280.0
offset_bottom = 1037.0

[node name="HBoxContainer" type="HBoxContainer" parent="NavBarLayer/NavBar/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("18_dppq6")
expand_mode = 2

[node name="Lamp" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -64.0
offset_right = 50.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("21_ksage")
expand_mode = 1
script = ExtResource("22_oa67o")
max_count = 1
object_scale = Vector2(1.5, 1.5)
object_info = "A lamp post improves visibility, supports natural surveillance, and reduces opportunities for crime at night."
category = "safe"
good_zones = Array[Rect2]([Rect2(0, 465, 200, 65), Rect2(1750, 465, 200, 65), Rect2(0, 650, 200, 65), Rect2(1750, 650, 200, 65)])
bad_zones = Array[Rect2]([Rect2(0, 0, 1920, 465), Rect2(0, 530, 1920, 120), Rect2(250, 650, 1300, 400)])

[node name="TextureRect4" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("18_dppq6")
expand_mode = 2

[node name="CarBarrier" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer/TextureRect4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -64.0
offset_right = 50.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("23_bd2qr")
expand_mode = 1
script = ExtResource("22_oa67o")
max_count = 1
object_scale = Vector2(1.5, 1.5)
object_info = "A car barrier controls access, prevents unauthorized entry, and increases safety by protecting pedestrian areas."
category = "safe"
good_zones = Array[Rect2]([Rect2(0, 450, 350, 75), Rect2(0, 625, 350, 100), Rect2(250, 525, 100, 100), Rect2(1700, 450, 250, 75), Rect2(1700, 525, 100, 100), Rect2(1700, 625, 100, 100)])
bad_zones = Array[Rect2]([Rect2(0, 0, 1920, 450), Rect2(0, 525, 250, 100), Rect2(350, 450, 1350, 1000), Rect2(0, 700, 1920, 400), Rect2(1800, 525, 300, 100)])

[node name="TextureRect2" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("18_dppq6")
expand_mode = 2

[node name="TrashCan" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer/TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("19_fyio0")
expand_mode = 1
script = ExtResource("22_oa67o")
max_count = 1
object_scale = Vector2(0.8, 0.8)
object_info = "A trash can supports cleanliness, defines cared-for space, and reinforces that the space is maintained."
category = "safe"
good_zones = Array[Rect2]([Rect2(0, 500, 200, 75), Rect2(1750, 500, 200, 75), Rect2(0, 680, 200, 75), Rect2(1750, 680, 200, 75)])
bad_zones = Array[Rect2]([Rect2(0, 0, 1920, 500), Rect2(0, 565, 1920, 120), Rect2(250, 650, 1300, 400)])

[node name="TextureRect16" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("18_dppq6")
expand_mode = 2

[node name="Brick Wall" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer/TextureRect16"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("24_0hnkm")
expand_mode = 1
script = ExtResource("25_non23")
max_count = 1
object_info = "A brick wall strengthens security, clearly defines boundaries, and provides a strong sense of protection, though it may limit visibility."
category = "neutral"
fence_scene_path = "uid://ba3aqtqemnn7u"

[node name="TextureRect17" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("18_dppq6")
expand_mode = 2

[node name="Barrier" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer/TextureRect17"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("26_rlno0")
expand_mode = 1
script = ExtResource("22_oa67o")
max_count = 1
object_scale = Vector2(2.5, 2.5)
object_info = "A barrier restricts access, directing movement and protecting spaces, but can also block sightlines."
bad_zones = Array[Rect2]([Rect2(0, 0, 1920, 1080)])

[node name="TextureRect19" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("18_dppq6")
expand_mode = 2

[node name="DrinkFountain" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer/TextureRect19"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("28_8ovxk")
expand_mode = 1
script = ExtResource("22_oa67o")
max_count = 1
object_scale = Vector2(1.5, 1.5)
object_info = "A drinking fountain encourages positive use of space, supports social interaction, and fosters a welcoming, cared-for environment."
bad_zones = Array[Rect2]([Rect2(0, 0, 1920, 1080)])

[node name="TextureRect18" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("18_dppq6")
expand_mode = 2

[node name="Basketball" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer/TextureRect18"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("27_2bs18")
expand_mode = 1
script = ExtResource("22_oa67o")
max_count = 1
object_scale = Vector2(0.8, 0.8)
object_info = "A basketball encourages activity, social interaction, and a friendly environment, helping create a safer and more welcoming space."
bad_zones = Array[Rect2]([Rect2(0, 0, 1920, 1080)])

[node name="TextureRect5" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("18_dppq6")
expand_mode = 2

[node name="CCTV Left Facing" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer/TextureRect5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("28_2nb5f")
expand_mode = 1
script = ExtResource("22_oa67o")
max_count = 1
object_scale = Vector2(2.5, 2)
object_info = "CCTVs increase surveillance, deter crime, and help monitor activity, enhancing overall safety."
category = "safe"

[node name="TextureRect6" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("18_dppq6")
expand_mode = 2

[node name="CCTV Right Facing" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer/TextureRect6"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("29_ekgmw")
expand_mode = 1
script = ExtResource("22_oa67o")
max_count = 1
object_scale = Vector2(2, 1.5)
object_info = "CCTVs increase surveillance, deter crime, and help monitor activity, enhancing overall safety."
category = "safe"

[node name="TextureRect7" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("18_dppq6")
expand_mode = 2

[node name="Fountain" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer/TextureRect7"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("30_lxvgo")
expand_mode = 1
script = ExtResource("22_oa67o")
max_count = 1
object_scale = Vector2(3.5, 3.5)
object_info = "A fountain defines space and encourages legitimate use, but doesn’t strongly impact security."
bad_zones = Array[Rect2]([Rect2(0, 0, 1920, 1080)])

[node name="TextureRect10" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("18_dppq6")
expand_mode = 2

[node name="Guard Dog" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer/TextureRect10"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("31_sedw4")
expand_mode = 1
script = ExtResource("22_oa67o")
max_count = 1
object_scale = Vector2(2, 2)
object_info = "A guard dog deters intruders, protects property, and increases the sense of security."
bad_zones = Array[Rect2]([Rect2(0, 0, 1920, 1080)])

[node name="TextureRect11" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("18_dppq6")
expand_mode = 2

[node name="Maintenance Worker" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer/TextureRect11"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("32_bw4h7")
expand_mode = 1
script = ExtResource("22_oa67o")
max_count = 1
object_scale = Vector2(2, 2)
object_info = "A maintenance worker signals a cared-for space, discourages vandalism, and promotes safety."
category = "safe"
good_zones = Array[Rect2]([Rect2(0, 425, 1920, 75)])
bad_zones = Array[Rect2]([Rect2(0, 0, 1920, 425), Rect2(0, 500, 350, 125), Rect2(1650, 500, 350, 125), Rect2(200, 850, 1400, 300)])

[node name="TextureRect12" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("18_dppq6")
expand_mode = 2

[node name="Security Patrol" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer/TextureRect12"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("33_n8xpl")
expand_mode = 1
script = ExtResource("22_oa67o")
max_count = 1
object_scale = Vector2(1.5, 1.5)
object_info = "A security patrol deters crime, monitors activity, and increases safety through visible presence."
category = "safe"
good_zones = Array[Rect2]([Rect2(0, 450, 1920, 75), Rect2(0, 650, 300, 100), Rect2(1750, 650, 300, 100)])
bad_zones = Array[Rect2]([Rect2(0, 0, 1920, 450), Rect2(0, 525, 350, 125), Rect2(1600, 525, 350, 125), Rect2(200, 850, 1400, 300)])

[node name="TextureRect3" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("18_dppq6")
expand_mode = 2

[node name="Netted Fence" type="TextureRect" parent="NavBarLayer/NavBar/ScrollContainer/HBoxContainer/TextureRect3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("34_eb5sb")
expand_mode = 1
script = ExtResource("25_non23")
max_count = 1
object_info = "A netted fence secures boundaries while maintaining visibility, supporting surveillance and a sense of safety."
fence_scene_path = "uid://m3pvwaq55fs3"

[node name="object_placed" type="AudioStreamPlayer" parent="NavBarLayer/NavBar"]
stream = ExtResource("35_dys5q")
volume_db = 10.0

[node name="InfoBoxLayer" type="CanvasLayer" parent="."]
layer = 6

[node name="InfoBox" type="Control" parent="InfoBoxLayer"]
visible = false
z_index = 100
layout_mode = 3
anchors_preset = 0
offset_right = 1000.0
offset_bottom = 40.0
mouse_default_cursor_shape = 1

[node name="Panel" type="Panel" parent="InfoBoxLayer/InfoBox"]
custom_minimum_size = Vector2(900, 100)
layout_mode = 0
offset_right = 900.0
offset_bottom = 100.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3p8oo")

[node name="Label" type="Label" parent="InfoBoxLayer/InfoBox/Panel"]
custom_minimum_size = Vector2(900, 100)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("36_jxhuj")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_u0h72")
autowrap_mode = 2
